Fixed layout issues with mobile / tablet views so far

--- a/prosopopee/themes/exposure/static/css/style-page.css
+++ b/prosopopee/themes/exposure/static/css/style-page.css
@@ -13,7 +13,6 @@ body {
 }
 
 section {
-    margin-bottom: 80px;
     margin-top: 40px;
 }
 
